fix: Add gap between member items

--- a/src/GS.PPoker/wwwroot/css/blazor.css
+++ b/src/GS.PPoker/wwwroot/css/blazor.css
@@ -72,4 +72,6 @@
 #member-panel {
   display: flex;
   flex-wrap: wrap;
+  gap: 1rem;
+  margin: 0.5rem;
 }
